nullaway_error_b534945d-8a81-46ab-8592-f45d15d36dd6.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TileData.java:288: error: [NullAway] dereferenced expression value is @Nullable
    String enc = value.trim();
                      ^
    (see http://t.uber.com/nullaway )
